# ai-event-bus

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
aiventbus/: __init__.py  __main__.py  _launcher.py  cli.py  config.py  install.py  main.py  models.py  platform.py  shell_hook.sh  telemetry.py
aiventbus/ai/: classifier.py  context_engine.py  ollama_client.py  output_parser.py
aiventbus/api/: actions.py  agents.py  assignments.py  cron.py  events.py  knowledge.py  memories.py  producers.py  routing_rules.py  system.py  webhook.py  ws.py
aiventbus/consumers/: base.py  llm_agent.py
aiventbus/core/: assignments.py  bus.py  executor.py  lifecycle.py  policy.py  tools.py
aiventbus/packaging/: __init__.py  deb.py  pyinstaller_build.py
aiventbus/producers/: base.py  clipboard.py  cron.py  dbus_listener.py  file_watcher.py  journald.py  manager.py  registry.py  terminal_monitor.py  webhook.py
aiventbus/producers/desktop_events/: __init__.py
aiventbus/static/: app.js  index.html  style.css
aiventbus/storage/: db.py  repositories.py  seed_defaults.py  seeder.py
aiventbus/tools/: __init__.py  playwright_backend.py
docs/: developer-guide.md  getting-started.md  macos-notes.md
packaging/: aiventbus.spec
tests/: test_assignment_manager.py  test_config.py  test_event_bus.py  test_memory_store.py  test_packaging_deb.py  test_telemetry.py
widget/src/: app.js  index.html  style.css
widget/src-tauri/: Cargo.toml  tauri.conf.json
widget/src-tauri/capabilities/: default.json
widget/src-tauri/src/: lib.rs  main.rs
(+7 files in other folders)
